# Scholar-Mind

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  neo4j_schema.cypher  pyproject.toml  requirements.txt  start.bat  start.ps1  test_doc.txt
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/api/: __init__.py  dependencies.py
backend/api/routes/: __init__.py  advanced.py  documents.py  graph.py  query.py  reports.py  search.py
backend/core/: __init__.py
backend/core/agents/: __init__.py  graph_state.py  research_agent.py
backend/core/document_processing/: __init__.py  chunker.py  metadata_extractor.py  pdf_parser.py  web_parser.py
backend/core/knowledge_graph/: __init__.py  community_detector.py  graph_builder.py  neo4j_client.py  query_engine.py
backend/core/nlp/: __init__.py  concept_linker.py  embeddings.py  entity_extractor.py  relation_extractor.py
backend/core/retrieval/: __init__.py  hybrid_retriever.py  reranker.py  vector_store.py
backend/db/: __init__.py  database.py  models.py
backend/ml/: __init__.py  claim_extractor.py  contradiction_detector.py  duplicate_detector.py  entity_classifier.py  model_manager.py  paper_recommender.py  question_generator.py
backend/services/: __init__.py  document_service.py  graph_service.py  query_service.py  report_service.py
backend/tasks/: __init__.py  celery_app.py  document_tasks.py
backend/tests/: conftest.py  test_full_system.py
backend/utils/: __init__.py  helpers.py  logging_config.py  validators.py
data/exports/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
notebooks/: 01_data_exploration.ipynb  02_graph_analysis.ipynb  03_model_evaluation.ipynb  04_demo.ipynb
scripts/: __init__.py  export_graph.py  quickstart.py  run_pipeline.py  seed_data.py  setup_neo4j.py
(+46 files in other folders)
